[package]
name = "rhymer"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0"
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
jsonwebtoken = "7"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
mongodb = "1.1.1"


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
